2005-11-14  David Ung  <davidu@mips.com>

	* gas/mips/mips.exp: Run new save/restore tests.
	* gas/testsuite/gas/mips/mips16e-save.s: New test for generating
	different styles of save/restore instructions.
	* gas/testsuite/gas/mips/mips16e-save.d: New.

2005-11-10  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/intelbad.d: Add tests for ill registers in brackets.
	* gas/i386/intelbad.l: Adjust.

2005-11-10  Nick Clifton  <nickc@redhat.com>

	* gas/arm/archv6t2-bad.s: Add tests of badly composed ldrex and
	strex instructions.
	* gas/arm/archv6t2-bad.l: Add expected error messages.
	* gas/arm/r15-bad.l: Adjust error messages for r15 usage in ldrex
	and strex instructions.

2005-11-08  Arnold Metselaar  <arnold.metselaar@planet.nl>

	* gas/all/cofftag.s: Convert numbers in .type 
	directives to decimal.
	* gas/all/gas.exp: enable cofftag-test for z80-*-coff.

2005-11-08  Nathan Sidwell  <nathan@codesourcery.com>

	Add ms2.
	* gas/ms1/allinsn.d: Adjust pcrel disassembly.
	* gas/ms1/errors.exp: Fix target triplet.
	* gas/ms1/ms1-16-003.d: Adjust pcrel disassembly.
	* gas/ms1/ms1-16-003.s: Tweak label.
	* gas/ms1/ms1.exp: Adjust target triplet.  Add ms2 test.
	* gas/ms1/ms2.d, gas/ms1/ms2.s: New.
	* gas/ms1/relocs.d: Adjust expected machine name and pcrel
	disassembly. 
	* gas/ms1/relocs.exp: Adjust target triplet.

2005-11-07  Jan Beulich  <jbeulich@novell.com>

	* gas/all/redef2.[sd]: New.
	* gas/all/gas.exp: Run new test.
	* gas/elf/redef.d: New.
	* gas/elf/elf.exp: Run new test.

2005-11-07  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/divide.s: Test line comment starting with '/'.
	* gas/i386/divide.d: Pass --divide to gas.
	* gas/i386/intelok.d: Likewise.
	* gas/i386/i386.exp (divide): Run for all targets.

2005-11-07  Arnold Metselaar <arnold.metselaar@planet.nl>

	* gas/z80/z80.exp: Added "suffix" test.
	* gas/z80/suffix.s: New file.
	* gas/z80/suffix.d: New file.

2005-11-04  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/padlock.d: Support 64bit BFD.
