@@ -1,3 +1,8 @@
+2005-11-14  Thiemo Seufer  <ths@networkno.de>
+
+	* gas/testsuite/gas/mips/mips16e-jrc.d: Tighten file format
+	check, relax whitespace checking.
+
 2005-11-14  David Ung  <davidu@mips.com>
 
 	* gas/mips/mips.exp: Run new save/restore tests.
